# textual-notes

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  console.py  db.py  db_create.py  note_list.py  note_screen.py  notes.py  old_notes.py  project.tcss  project_notes.project.json  project_screen.py  pyproject-old.toml  pyproject.toml  ui.py  x.tcss
forms/: note.py  project.py
src/textual_notes/: console.py  db.py  load_data.py  note_report.py  note_screen.py  project_detail_screen.py  project_list_screen.py  project_screen.py  styles.py
src/textual_notes/fixtures/: project_notes.notes.json  project_notes.project.json
tests/: conftest.py  test_db.py
