[project]
name = "textual-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mongoengine>=0.29.1",
    "textual-forms",
]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]

[tool.uv.sources]
textual-forms = { git = "https://github.com/holdenweb/textual-forms.git", rev = "r0.7.7" }
