[project]
name = "textual-notes"
version = "0.1.0"
description = "A small note-taking demo for the textual_forms package,"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mongoengine>=0.29.1",
    "mongomock>=4.3.0",
    "textual",
    "textual-forms",
]

[[project.authors]]
name = "Steve Holden"
email = "steve@holdenweb.com"

[dependency-groups]
dev = [ "pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-cov>=6.1.1", "ruff>=0.11.7", "semver>=3.0.4", "textual-dev>=1.7.0", "toml>=0.10.2",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
demo = "textual_notes.console:main"

[tool.uv]
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
textual-forms = { git = "https://github.com/holdenweb/textual-forms.git", rev = "r0.7.7" }
textual = { path = "../textual-prod", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/textual_notes"]

[tool.hatch.build.targets.sdist]
only-include = [ "src/textual_notes",]

[tool.hatch.build.targets.sdist.sources]
"src/textual_notes" = "textual_notes"

[tool.hatch.build.targets.wheel.sources]
"src/textual_notes" = "textual_notes"
