[project]
name = "textual-notes"
version = "0.1.0"
description = "A note-taking app using textual-wtf and forms-engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mongoengine>=0.29.1",
    "mongomock>=4.3.0",
    "textual",
    "textual-fspicker>=0.6",
    "textual-wtf>=0.10.0",
    "forms-engine[mongoengine]",
]

[[project.authors]]
name = "Steve Holden"
email = "steve@holdenweb.com"

[dependency-groups]
dev = [ "pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-cov>=6.1.1", "ruff>=0.11.7", "semver>=3.0.4", "textual-dev>=1.7.0", "toml>=0.10.2",]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
demo = "textual_notes.console:main"

[tool.uv]
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
textual-wtf = { path = "../textual-wtf", editable = true }
forms-engine = { path = "../forms-engine", editable = true }
textual = { path = "../textual-prod", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/textual_notes"]

[tool.hatch.build.targets.sdist]
only-include = [ "src/textual_notes",]

[tool.hatch.build.targets.sdist.sources]
"src/textual_notes" = "textual_notes"

[tool.hatch.build.targets.wheel.sources]
"src/textual_notes" = "textual_notes"
